修改了一部分sql 写了一部分搜索引擎的接入
