# userservice/pkg/grpc/handler.go
@@ -4,7 +4,6 @@ import (
 	endpoint "awesomeProject/userservice/pkg/endpoint"
 	pb "awesomeProject/userservice/pkg/grpc/pb"
 	"context"
-	"errors"
 	grpc "github.com/go-kit/kit/transport/grpc"
 	context1 "golang.org/x/net/context"
 )
@@ -18,14 +17,40 @@ func makeGetUserListHandler(endpoints endpoint.Endpoints, options []grpc.ServerO
 // gRPC request to a user-domain GetUserList request.
 // TODO implement the decoder
 func decodeGetUserListRequest(_ context.Context, r interface{}) (interface{}, error) {
-	return nil, errors.New("'Userservice' Decoder is not impelemented")
+	req := endpoint.GetUserListRequest{
+		Date:     r.(*pb.GetUserListRequest).Date,
+		IsSigned: r.(*pb.GetUserListRequest).IsSigned,
+	}
+	return req, nil
 }
 
 // encodeGetUserListResponse is a transport/grpc.EncodeResponseFunc that converts
 // a user-domain response to a gRPC reply.
 // TODO implement the encoder
 func encodeGetUserListResponse(_ context.Context, r interface{}) (interface{}, error) {
-	return nil, errors.New("'Userservice' Encoder is not impelemented")
+	resp := &pb.Resp{
+		Msg:  r.(endpoint.GetUserListResponse).Message.Msg,
+		Succ: r.(endpoint.GetUserListResponse).Message.Succ,
+	}
+	signInfoList := r.(endpoint.GetUserListResponse).SignInfoList
+	var signInfolist []*pb.SignInfo
+	for _, v := range signInfoList {
+		signInfolist = append(signInfolist, &pb.SignInfo{
+			User: &pb.User{
+				Name:  v.User.Name,
+				Seq:   v.User.Seq,
+				Photo: v.User.Photo,
+			},
+			Date:    v.Date.String(),
+			UserSeq: v.User_Seq,
+		})
+	}
+
+	rep := pb.GetUserListReply{
+		SignInfo: signInfolist,
+		Resp:     resp,
+	}
+	return &rep, nil
 }
 func (g *grpcServer) GetUserList(ctx context1.Context, req *pb.GetUserListRequest) (*pb.GetUserListReply, error) {
 	_, rep, err := g.getUserList.ServeGRPC(ctx, req)
@@ -60,6 +85,7 @@ func encodeLoginResponse(_ context.Context, r interface{}) (interface{}, error) 
 		Msg:  r.(endpoint.LoginResponse).Message.Msg,
 		Succ: r.(endpoint.LoginResponse).Message.Succ,
 	}
+
 	rep := pb.LoginReply{
 		Resp: resp,
 	}
